--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.1.7",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "uuid": "^10.0.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
